[gd_scene load_steps=2 format=3 uid="uid://bv1rgkr4hoinx"]

[ext_resource type="Script" uid="uid://rg107f6ffit4" path="res://maps/Menus/pause_menu.gd" id="1_gry2a"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 4
script = ExtResource("1_gry2a")

[node name="PanelContainer" type="PanelContainer" parent="."]
self_modulate = Color(0.1316, 0.1316, 0.14, 0.470588)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
z_index = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 8
theme_override_constants/margin_bottom = 16

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_type_variation = &"TitleLabel"
text = "Paused"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
z_index = 2
layout_mode = 2
text = "Resume"

[node name="OptionsButton" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
z_index = 2
layout_mode = 2
text = "Options"

[node name="MainMenuButton" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
z_index = 2
layout_mode = 2
text = "Quit to Menu"

[connection signal="pressed" from="PanelContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
